Navigation cache & load animations

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -58,9 +58,10 @@ $foundation-palette: (
   warning: #ffae00,
   alert: #cc4b37,
 );
-$light-gray: #e6e6e6;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$light-gray: #ddd;
+$medium-gray: #999;
+$dark-gray: #666;
+$extra-dark-gray: #333;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
@@ -343,12 +344,12 @@ $dropdown-sizes: (
 // 18. Dropdown Menu
 // -----------------
 
-$dropdownmenu-arrows: true;
+$dropdownmenu-arrows: false;
 $dropdownmenu-arrow-color: $anchor-color;
 $dropdownmenu-arrow-size: 6px;
-$dropdownmenu-min-width: 200px;
-$dropdownmenu-background: $white;
-$dropdownmenu-border: 1px solid $medium-gray;
+$dropdownmenu-min-width: 100%;
+$dropdownmenu-background: $extra-dark-gray;
+$dropdownmenu-border: none;
 
 // 19. Forms
 // ---------
@@ -615,8 +616,8 @@ $tooltip-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.5rem;
-$topbar-background: $light-gray;
-$topbar-submenu-background: $topbar-background;
+$topbar-background: $black;
+$topbar-submenu-background: $extra-dark-gray;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
 $topbar-unstack-breakpoint: medium;
