--- a/views/home.html
+++ b/views/home.html
@@ -29,7 +29,7 @@
                         </select>
                     </div>
                     <div class="medium-6 column">
-                        <label for="multiple-select">Multiple select</label>
+                        <label for="multiple-select">Multiple select (<small><code>Ctrl+click</code></small>)</label>
                         <select id="multiple-select" data-select="" multiple size="6">
                             <option value="1">Option 1</option>
                             <option value="2">Option 2</option>
