Navigation cache & load animations

--- a/views/home.html
+++ b/views/home.html
@@ -6,7 +6,7 @@
             </h2>
             <p>
                 This plugin makes it easy create styleable select dropdowns in Foundation.<br>
-                More details on <a href="https://github.com/samuelmc/foundation-select">Github</a>
+                Read the <a href="/foundation-plugins/select">documentation</a>
             </p>
             <form>
                 <div class="row">
