Update foundation & settings

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,8 +10,9 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @import 'motion-ui';
 
 @include foundation-global-styles;
-@include foundation-grid;
+//@include foundation-grid;
 // @include foundation-flex-grid;
+@include foundation-xy-grid-classes;
 @include foundation-typography;
 @include foundation-button;
 @include foundation-forms;
@@ -37,6 +38,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @include foundation-pagination;
 @include foundation-progress-bar;
 // @include foundation-progress-element;
+// @include foundation-progress-element;
 // @include foundation-meter-element;
 @include foundation-slider;
 @include foundation-sticky;
@@ -49,12 +51,10 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 @include foundation-tooltip;
 @include foundation-top-bar;
 @include foundation-visibility-classes;
-@include foundation-float-classes;
-// @include foundation-flex-classes;
+// @include foundation-float-classes;
+@include foundation-flex-classes;
 
-@include foundation-perfect-scrollbar;
-@include foundation-select;
-
+// @include foundation-prototype-classes;
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
