--- a/views/foundation-plugins/select.html
+++ b/views/foundation-plugins/select.html
@@ -1,13 +1,13 @@
-<main class="row">
-    <div class="columns">
+<main class="grid-x grid-margin-x">
+    <div class="cell">
 
         <h1>Foundation Select<br>
             <small>Slick, intuitive and styleable select plugin.</small>
         </h1>
         <p>This plugin makes it easy create styleable select dropdowns in Foundation.</p>
 
-        <div class="row">
-            <div class="column">
+        <div class="grid-x grid-margin-x">
+            <div class="cell">
                 <pre><code class="html">&lt;label for="select-1"&gt;Basic select&lt;/label&gt;
 &lt;select id="select-1" data-select&gt;
     &lt;option value=""&gt;Choose an option&lt;/option&gt;
@@ -25,10 +25,10 @@
 &lt;/select&gt;</code></pre>
             </div>
 
-            <div class="column">
+            <div class="cell">
                 <form>
-                    <div class="row">
-                        <div class="medium-6 column">
+                    <div class="grid-x grid-margin-x">
+                        <div class="medium-6 cell">
                             <label for="select-1">Basic select</label>
                             <select id="select-1" data-select>
                                 <option value="">Choose an option...</option>
@@ -46,7 +46,7 @@
                                 <option value="12">Option 12</option>
                             </select>
                         </div>
-                        <div class="medium-6 column">
+                        <div class="medium-6 cell">
                             <label for="select-2">Multiple select</label>
                             <select id="select-2" data-select multiple size="6">
                                 <option value="">Choose an option...</option>
