--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
-<main class="row">
-    <div class="medium-10 large-8 medium-offset-1 large-offset-2 columns">
+<main class="grid-x grid-margin-x">
+    <div class="medium-10 large-8 medium-offset-1 large-offset-2 cell">
         <div class="callout">
             <h2 class="alert">Foundation Select<br>
                 <small>Try the select plugin for Foundation 6!</small>
@@ -9,8 +9,8 @@
                 Read the <a href="/foundation-plugins/select">documentation</a>
             </p>
             <form>
-                <div class="row">
-                    <div class="medium-6 column">
+                <div class="grid-x grid-margin-x">
+                    <div class="medium-6 cell">
                         <label for="basic-select">Basic select</label>
                         <select id="basic-select" data-select="">
                             <option value="">Choose an option...</option>
@@ -28,7 +28,7 @@
                             <option value="12">Option 12</option>
                         </select>
                     </div>
-                    <div class="medium-6 column">
+                    <div class="medium-6 cell">
                         <label for="multiple-select">Multiple select (<small><code>Ctrl+click</code></small>)</label>
                         <select id="multiple-select" data-select="" multiple size="6">
                             <option value="1">Option 1</option>
