Foundation update refactoring

--- a/views/foundation-plugins/select.html
+++ b/views/foundation-plugins/select.html
@@ -1,4 +1,5 @@
-<main class="grid-x grid-margin-x">
+<main class="grid-container">
+    <div class="grid-x grid-margin-x">
     <div class="cell">
 
         <h1>Foundation Select<br>
@@ -159,5 +160,5 @@ $select-dropdown-height: rem-calc(300);</code></pre>
         </table>
 
     </div>
-
+    </div>
 </main>
