--- a/views/home.html
+++ b/views/home.html
@@ -1,52 +1,54 @@
-<main class="grid-x grid-margin-x">
-    <div class="medium-10 large-8 medium-offset-1 large-offset-2 cell">
-        <div class="callout">
-            <h2 class="alert">Foundation Select<br>
-                <small>Try the select plugin for Foundation 6!</small>
-            </h2>
-            <p>
-                This plugin makes it easy create styleable select dropdowns in Foundation.<br>
-                Read the <a href="/foundation-plugins/select">documentation</a>
-            </p>
-            <form>
-                <div class="grid-x grid-margin-x">
-                    <div class="medium-6 cell">
-                        <label for="basic-select">Basic select</label>
-                        <select id="basic-select" data-select="">
-                            <option value="">Choose an option...</option>
-                            <option value="1">Option 1</option>
-                            <option value="2">Option 2</option>
-                            <option value="3">Option 3</option>
-                            <option value="4">Option 4</option>
-                            <option value="5">Option 5</option>
-                            <option value="6">Option 6</option>
-                            <option value="7">Option 7</option>
-                            <option value="8">Option 8</option>
-                            <option value="9">Option 9</option>
-                            <option value="10">Option 10</option>
-                            <option value="11">Option 11</option>
-                            <option value="12">Option 12</option>
-                        </select>
+<main class="grid-container">
+    <div class="grid-x grid-margin-x">
+        <div class="medium-10 large-8 medium-offset-1 large-offset-2 cell">
+            <div class="callout">
+                <h2 class="alert">Foundation Select<br>
+                    <small>Try the select plugin for Foundation 6!</small>
+                </h2>
+                <p>
+                    This plugin makes it easy create styleable select dropdowns in Foundation.<br>
+                    Read the <a href="/foundation-plugins/select">documentation</a>
+                </p>
+                <form>
+                    <div class="grid-x grid-margin-x">
+                        <div class="medium-6 cell">
+                            <label for="basic-select">Basic select</label>
+                            <select id="basic-select" data-select="">
+                                <option value="">Choose an option...</option>
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                                <option value="4">Option 4</option>
+                                <option value="5">Option 5</option>
+                                <option value="6">Option 6</option>
+                                <option value="7">Option 7</option>
+                                <option value="8">Option 8</option>
+                                <option value="9">Option 9</option>
+                                <option value="10">Option 10</option>
+                                <option value="11">Option 11</option>
+                                <option value="12">Option 12</option>
+                            </select>
+                        </div>
+                        <div class="medium-6 cell">
+                            <label for="multiple-select">Multiple select (<small><code>Ctrl+click</code></small>)</label>
+                            <select id="multiple-select" data-select="" multiple size="6">
+                                <option value="1">Option 1</option>
+                                <option value="2">Option 2</option>
+                                <option value="3">Option 3</option>
+                                <option value="4">Option 4</option>
+                                <option value="5">Option 5</option>
+                                <option value="6">Option 6</option>
+                                <option value="7">Option 7</option>
+                                <option value="8">Option 8</option>
+                                <option value="9">Option 9</option>
+                                <option value="10">Option 10</option>
+                                <option value="11">Option 11</option>
+                                <option value="12">Option 12</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="medium-6 cell">
-                        <label for="multiple-select">Multiple select (<small><code>Ctrl+click</code></small>)</label>
-                        <select id="multiple-select" data-select="" multiple size="6">
-                            <option value="1">Option 1</option>
-                            <option value="2">Option 2</option>
-                            <option value="3">Option 3</option>
-                            <option value="4">Option 4</option>
-                            <option value="5">Option 5</option>
-                            <option value="6">Option 6</option>
-                            <option value="7">Option 7</option>
-                            <option value="8">Option 8</option>
-                            <option value="9">Option 9</option>
-                            <option value="10">Option 10</option>
-                            <option value="11">Option 11</option>
-                            <option value="12">Option 12</option>
-                        </select>
-                    </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </main>
