--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,6 +6,7 @@
     line-height: 1;
     padding-top: 0;
     padding-bottom: 0;
+    margin-left: 1rem;
     strong {
       display: inline-block;
       padding: .7rem 0;
