--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <main class="grid-container">
     <div class="grid-x grid-margin-x">
         <div class="medium-10 large-8 medium-offset-1 large-offset-2 cell">
-            <div class="callout">
+            <div class="callout" id="fnd-select-callout">
                 <h2 class="alert">Foundation Select<br>
                     <small>Try the select plugin for Foundation 6!</small>
                 </h2>
