--- a/views/foundation-plugins/select.html
+++ b/views/foundation-plugins/select.html
@@ -206,7 +206,7 @@ $select-multiple-size-max: 12;</code></pre>
                 <div class="grid-x grid-margin-x">
                     <div class="cell medium-6">
                         <h4>Html</h4>
-                        <pre><code class="html">&lt;select data-select data-icon-class="fa-chevron-down"&gt;
+                        <pre><code class="html">&lt;select data-select data-dropdown-offset="10"&gt;
     &lt;option value=""&gt;Select an option&lt;/option&gt;
     &lt;option value="1"&gt;Option 1&lt;/option&gt;
     &lt;option value="2"&gt;Option 2&lt;/option&gt;
