--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -72,6 +72,9 @@
                         </li>
                     </ul>
                 </div>
+                <div class="pdf-download">
+                    <a download href="/downloads/samuel-moncarey-cv-nl.pdf" class="button">Download</a>
+                </div>
             </div>
         </div>
     </div>
