Update contact info

--- a/views/cv/en.html
+++ b/views/cv/en.html
@@ -5,10 +5,10 @@
                 <div class="page">
                     <h1>Curriculum Vitae</h1>
                     <div class="contact-info">
-                        <p><strong>Samuel Moncarey</strong></p>
-                        <p>Baron August De Becker-Remyplein 36, bus 302<br>3010 Kessel-Lo</p>
-                        <p>0489/91 00 84<br>samuel.moncarey@gmail.com</p>
-                        <p>°06 april 1991</p>
+                        <p><strong>Samuel Moncarey</strong><span class="float-right">°06 april 1991</span></p>
+                        <p>0489/91 00 84</p>
+                        <p>samuel.moncarey@gmail.com</p>
+                        <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
                     </div>
                     <h2>Experience</h2>
                     <ul>
@@ -17,7 +17,7 @@
                             <br>Development and maintenance web solutions for different companies
                         </li>
                         <li>
-                            <strong>Web developer</strong> at <strong>Ademar</strong>, Hasselt <span class="year">2013 – 2014</span>
+                            <strong>Web developer</strong> at <strong>Addemar</strong>, Hasselt <span class="year">2013 – 2014</span>
                             <br>Development of unit tests and functional tests
                         </li>
                         <li>
