--- a/views/cv/fr.html
+++ b/views/cv/fr.html
@@ -5,10 +5,10 @@
                 <div class="page">
                     <h1>Curriculum Vitae</h1>
                     <div class="contact-info">
-                        <p><strong>Samuel Moncarey</strong></p>
-                        <p>Baron August De Becker-Remyplein 36, bus 302<br>3010 Kessel-Lo</p>
-                        <p>0489/91 00 84<br>samuel.moncarey@gmail.com</p>
-                        <p>°06 april 1991</p>
+                        <p><strong>Samuel Moncarey</strong><span class="float-right">°06 avril 1991</span></p>
+                        <p>0489/91 00 84</p>
+                        <p>samuel.moncarey@gmail.com</p>
+                        <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
                     </div>
                     <h2>Experience</h2>
                     <ul>
@@ -17,7 +17,7 @@
                             <br>Développement et entretien de solutions web pour divers entreprises
                         </li>
                         <li>
-                            <strong>Développeur web</strong> chez <strong>Ademar</strong>, Hasselt <span class="year">2013 – 2014</span>
+                            <strong>Développeur web</strong> chez <strong>Addemar</strong>, Hasselt <span class="year">2013 – 2014</span>
                             <br>Développement de testes unit et functionel
                         </li>
                         <li>
