--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -5,10 +5,10 @@
                 <div class="page">
                     <h1>Curriculum Vitae</h1>
                     <div class="contact-info">
-                        <p><strong>Samuel Moncarey</strong></p>
-                        <p>Baron August De Becker-Remyplein 36, bus 302<br>3010 Kessel-Lo</p>
-                        <p>0489/91 00 84<br>samuel.moncarey@gmail.com</p>
-                        <p>°06 april 1991</p>
+                        <p><strong>Samuel Moncarey</strong><span class="float-right">°06 april 1991</span></p>
+                        <p>0489/91 00 84</p>
+                        <p>samuel.moncarey@gmail.com</p>
+                        <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
                     </div>
                     <h2>Ervaring</h2>
                     <ul>
@@ -64,12 +64,12 @@
                         <li>
                             <strong>Talenkennis</strong>: Tweetalige opvoeding <strong>Nederlands</strong>-<strong>Frans</strong>; mijn <strong>Engels</strong> is ook zeer goed.
                         </li>
-                        <li>
-                            <strong>Sport</strong>: Ik ben een fervente fietser. Vroeger heb ik ook aan athletiek en basketbal gedaan.
-                        </li>
-                        <li>
-                            Daarnaast speelt <strong>muziek</strong> ook een grote rol in mijn leven. Zelf speel ik keyboard.
-                        </li>
+<!--                        <li>-->
+<!--                            <strong>Sport</strong>: Ik ben een fervente fietser. Vroeger heb ik ook aan athletiek en basketbal gedaan.-->
+<!--                        </li>-->
+<!--                        <li>-->
+<!--                            Daarnaast speelt <strong>muziek</strong> ook een grote rol in mijn leven. Zelf speel ik keyboard.-->
+<!--                        </li>-->
                     </ul>
                 </div>
                 <div class="pdf-download">
